# geometry

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
modules/: CMakeLists.txt
modules/include/la/: Geometry.ixx
modules/src/la/: Matrix.ixx  Point.ixx  Vector.ixx
